tests/baselines/reference/computedPropertiesInDestructuring2.errors.txt
computedPropertiesInDestructuring2.ts(2,7): error TS2537: Type '{}' has no matching index signature for type 'string'.


==== computedPropertiesInDestructuring2.ts (1 errors) ====
    let foo2 = () => "bar";
    let {[foo2()]: bar3} = {};
          ~~~~~~
!!! error TS2537: Type '{}' has no matching index signature for type 'string'.